fix doc seeder buttons - both buttons are on the same vertical alignment - make the buttons more descriptive - expand height of the button to prevent button text overflow for mobile screens

--- a/src/styles/document-seeder.css
+++ b/src/styles/document-seeder.css
@@ -30,6 +30,18 @@
   overflow: auto;
 }
 
+.document-seeder-buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.document-seeder-toggle-highlight {
+  margin-bottom: 0.5em;
+  height: auto;
+}
+
 .document-seeder-highlight-panel span {
   white-space: pre-line;
 }
